--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             font-weight: 700;
             color: var(--primary-color);
             text-decoration: none;
+            display: flex;
+            align-items: center;
+        }
+
+        .logo i {
+            margin-right: 8px;
         }
 
         .nav-menu {
@@ -76,6 +82,22 @@
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s ease;
+            position: relative;
+        }
+
+        .nav-link:after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 2px;
+            bottom: -5px;
+            left: 0;
+            background-color: var(--primary-color);
+            transition: width 0.3s ease;
+        }
+
+        .nav-link:hover:after {
+            width: 100%;
         }
 
         .nav-link:hover {
@@ -101,6 +123,8 @@
         .btn-primary:hover {
             background-color: transparent;
             color: var(--primary-color);
+            transform: translateY(-3px);
+            box-shadow: 0 10px 20px rgba(151, 125, 255, 0.3);
         }
 
         .btn-outline {
@@ -112,26 +136,34 @@
         .btn-outline:hover {
             background-color: var(--accent-color);
             color: var(--light-color);
+            transform: translateY(-3px);
+            box-shadow: 0 10px 20px rgba(46, 73, 250, 0.3);
         }
 
         .hamburger {
             display: none;
             cursor: pointer;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 30px;
+            height: 21px;
+            z-index: 1001;
         }
 
         .bar {
             display: block;
-            width: 25px;
+            width: 100%;
             height: 3px;
-            margin: 5px auto;
             background-color: var(--dark-color);
             transition: all 0.3s ease;
+            border-radius: 3px;
         }
 
         /* Hero Section */
         .hero {
             padding: 150px 0 100px;
             background: linear-gradient(135deg, rgba(151, 125, 255, 0.1) 0%, rgba(46, 73, 250, 0.1) 100%);
+            overflow: hidden;
         }
 
         .hero-content {
@@ -143,6 +175,10 @@
         .hero-text {
             flex: 1;
             padding-right: 30px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 1s ease forwards;
+            animation-delay: 0.3s;
         }
 
         .hero-heading {
@@ -155,6 +191,18 @@
 
         .hero-heading span {
             color: var(--primary-color);
+            position: relative;
+        }
+
+        .hero-heading span:after {
+            content: '';
+            position: absolute;
+            bottom: 5px;
+            left: 0;
+            width: 100%;
+            height: 10px;
+            background-color: rgba(151, 125, 255, 0.2);
+            z-index: -1;
         }
 
         .hero-description {
@@ -171,6 +219,10 @@
         .hero-image {
             flex: 1;
             text-align: center;
+            opacity: 0;
+            transform: translateX(30px);
+            animation: fadeInRight 1s ease forwards;
+            animation-delay: 0.6s;
         }
 
         .hero-image img {
@@ -201,12 +253,29 @@
         .section-title {
             text-align: center;
             margin-bottom: 60px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 1s ease forwards;
         }
 
         .section-title h2 {
             font-size: 2.5rem;
             color: var(--dark-color);
             margin-bottom: 15px;
+            position: relative;
+            display: inline-block;
+        }
+
+        .section-title h2:after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 4px;
+            background: linear-gradient(to right, var(--primary-color), var(--accent-color));
+            border-radius: 2px;
         }
 
         .section-title p {
@@ -229,6 +298,8 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             text-align: center;
+            opacity: 0;
+            transform: translateY(30px);
         }
 
         .feature-card:hover {
@@ -247,6 +318,11 @@
             margin: 0 auto 20px;
             color: var(--light-color);
             font-size: 28px;
+            transition: transform 0.3s ease;
+        }
+
+        .feature-card:hover .feature-icon {
+            transform: rotateY(180deg);
         }
 
         .feature-title {
@@ -273,22 +349,44 @@
 
         .about-image {
             flex: 1;
+            opacity: 0;
+            transform: translateX(-30px);
         }
 
         .about-image img {
             width: 100%;
             border-radius: 15px;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+            transition: transform 0.5s ease;
+        }
+
+        .about-image img:hover {
+            transform: scale(1.03);
         }
 
         .about-text {
             flex: 1;
+            opacity: 0;
+            transform: translateX(30px);
         }
 
         .about-text h2 {
             font-size: 2.5rem;
             margin-bottom: 20px;
             color: var(--dark-color);
+            position: relative;
+            padding-bottom: 15px;
+        }
+
+        .about-text h2:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 80px;
+            height: 4px;
+            background: linear-gradient(to right, var(--primary-color), var(--accent-color));
+            border-radius: 2px;
         }
 
         .about-text p {
@@ -302,6 +400,8 @@
             background: linear-gradient(135deg, var(--primary-color) 0%, var(--accent-color) 100%);
             color: var(--light-color);
             text-align: center;
+            opacity: 0;
+            transform: translateY(30px);
         }
 
         .call-me h2 {
@@ -364,11 +464,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            transition: background-color 0.3s ease;
+            transition: all 0.3s ease;
         }
 
         .social-links a:hover {
             background-color: var(--primary-color);
+            transform: translateY(-5px);
         }
 
         .copyright {
@@ -376,6 +477,43 @@
             padding-top: 30px;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
             color: #ccc;
+        }
+
+        /* Animations */
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInRight {
+            from {
+                opacity: 0;
+                transform: translateX(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes fadeInLeft {
+            from {
+                opacity: 0;
+                transform: translateX(-30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
 
         /* Responsive Design */
@@ -397,49 +535,96 @@
             .about-content {
                 flex-direction: column;
             }
-        }
-
-        @media (max-width: 768px) {
-            .hamburger {
-                display: block;
-            }
-
-            .hamburger.active .bar:nth-child(2) {
-                opacity: 0;
-            }
-
-            .hamburger.active .bar:nth-child(1) {
-                transform: translateY(8px) rotate(45deg);
-            }
-
-            .hamburger.active .bar:nth-child(3) {
-                transform: translateY(-8px) rotate(-45deg);
-            }
 
             .nav-menu {
                 position: fixed;
                 left: -100%;
-                top: 80px;
-                gap: 0;
+                top: 0;
                 flex-direction: column;
                 background-color: var(--light-color);
-                width: 100%;
-                text-align: center;
-                transition: 0.3s;
-                box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
-                padding: 20px 0;
-            }
-
-            .nav-item {
-                margin: 15px 0;
+                width: 80%;
+                height: 100vh;
+                box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+                transition: 0.4s;
+                padding-top: 80px;
+                z-index: 999;
             }
 
             .nav-menu.active {
                 left: 0;
             }
 
+            .nav-item {
+                margin: 20px 0;
+                text-align: center;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .hamburger.active .bar:nth-child(1) {
+                transform: translateY(9px) rotate(45deg);
+            }
+
+            .hamburger.active .bar:nth-child(2) {
+                opacity: 0;
+            }
+
+            .hamburger.active .bar:nth-child(3) {
+                transform: translateY(-9px) rotate(-45deg);
+            }
+        }
+
+        @media (max-width: 768px) {
             .hero-heading {
                 font-size: 2.5rem;
+            }
+
+            .hero-buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .btn {
+                width: 80%;
+                text-align: center;
+                margin-bottom: 10px;
+            }
+
+            .feature-card {
+                padding: 20px;
+            }
+
+            .footer-content {
+                grid-template-columns: 1fr;
+                text-align: center;
+            }
+
+            .social-links {
+                justify-content: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero-heading {
+                font-size: 2rem;
+            }
+
+            .section-title h2 {
+                font-size: 2rem;
+            }
+
+            .feature-title {
+                font-size: 1.3rem;
+            }
+
+            .about-text h2 {
+                font-size: 2rem;
+            }
+
+            .call-me h2 {
+                font-size: 2rem;
             }
         }
     </style>
@@ -450,7 +635,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo">Layout</a>
+                <a href="#" class="logo"><i class="fas fa-paint-brush"></i>Layout</a>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#features" class="nav-link">Layanan</a></li>
@@ -613,15 +798,23 @@
         // Mobile Menu Toggle
         const hamburger = document.querySelector(".hamburger");
         const navMenu = document.querySelector(".nav-menu");
+        const body = document.body;
 
         hamburger.addEventListener("click", () => {
             hamburger.classList.toggle("active");
             navMenu.classList.toggle("active");
+
+            if (navMenu.classList.contains("active")) {
+                body.style.overflow = "hidden";
+            } else {
+                body.style.overflow = "auto";
+            }
         });
 
         document.querySelectorAll(".nav-link").forEach(n => n.addEventListener("click", () => {
             hamburger.classList.remove("active");
             navMenu.classList.remove("active");
+            body.style.overflow = "auto";
         }));
 
         // Smooth Scrolling
@@ -652,13 +845,63 @@
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
-                    entry.target.classList.add('animate');
+                    entry.target.style.opacity = '1';
+                    entry.target.style.transform = 'translateY(0)';
+
+                    if (entry.target.classList.contains('about-image')) {
+                        entry.target.style.transform = 'translateX(0)';
+                    }
+
+                    if (entry.target.classList.contains('about-text')) {
+                        entry.target.style.transform = 'translateX(0)';
+                    }
+
+                    if (entry.target.classList.contains('call-me')) {
+                        entry.target.style.transform = 'translateY(0)';
+                    }
+
+                    if (entry.target.classList.contains('feature-card')) {
+                        // Stagger animation for feature cards
+                        const cards = document.querySelectorAll('.feature-card');
+                        cards.forEach((card, index) => {
+                            setTimeout(() => {
+                                card.style.opacity = '1';
+                                card.style.transform = 'translateY(0)';
+                            }, index * 150);
+                        });
+                    }
                 }
             });
         }, observerOptions);
 
-        document.querySelectorAll('.feature-card, .about-image, .about-text').forEach(el => {
+        // Observe elements for animation
+        document.querySelectorAll('.section-title').forEach(el => {
             observer.observe(el);
+        });
+
+        document.querySelectorAll('.feature-card').forEach(el => {
+            observer.observe(el);
+        });
+
+        document.querySelectorAll('.about-image').forEach(el => {
+            observer.observe(el);
+        });
+
+        document.querySelectorAll('.about-text').forEach(el => {
+            observer.observe(el);
+        });
+
+        document.querySelectorAll('.call-me').forEach(el => {
+            observer.observe(el);
+        });
+
+        // Add animation on load for hero elements
+        window.addEventListener('load', () => {
+            document.querySelector('.hero-text').style.opacity = '1';
+            document.querySelector('.hero-text').style.transform = 'translateY(0)';
+
+            document.querySelector('.hero-image').style.opacity = '1';
+            document.querySelector('.hero-image').style.transform = 'translateX(0)';
         });
     </script>
 </body>
